# pec

./: .gitignore  C.grm  CHANGES  DESIGN  FAQ  LICENSE  LLVM.grm  Main.hs  Makefile  MkPec.hs  Pds.grm  Pec.cf  Pec.grm  Pir.grm  README  Setup.hs  THANKS  TODO  pec.cabal
Language/C/: Abs.hs  Par.hs  Par.y
Language/LLVM/: Abs.hs  Par.hs  Par.y
Language/Pds/: Abs.hs  Par.hs  Par.y
Language/Pec/: Abs.hs  Doc.html  Doc.tex  Doc.txt  ErrM.hs  Layout.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Skel.hs  Test.hs
Language/Pir/: Abs.hs  Par.hs  Par.y
Pec/: Base.hs  C.hs  Desugar.hs  HUtil.hs  IUtil.hs  LLVM.hs  Makefile  PUtil.hs  Type.hs
lib/: Prelude.pec  Stack.pec
lib/Data/: Array.pec  Deque.pec  Queue.pec  Stack.pec  StrBuf.pec
src/: Pec.hs  PecGen.hs  PecGenCnt.hs
test_cases/: Makefile  Prelude.pec  StrBuf.pec  TestArray.pec  TestDeque.pec  TestEmptyAlts.pec  TestFun.pec  TestLoad.pec  TestPrims.pec  TestQueue.pec  TestStack.pec  TestStrBuf.pec  TestTuple.pec  TestVariant.pec
test_cases/euler/: Euler1.pec  Euler10.pec  Euler11.pec  Euler12.pec  Euler13.pec  Euler14.pec  Euler145.pec  Euler2.pec  Euler3.pec  Euler4.pec  Euler5.pec  Euler6.pec  Euler7.pec  Euler8.pec  Euler9.pec
